<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="T_TCP_SERVER_CTRL" Id="{534005fc-8c32-4ed2-afe8-047f9dd4855c}">
    <Declaration><![CDATA[TYPE T_TCP_SERVER_CTRL :
STRUCT
	(* CTRL *)
	nCommand:		E_RS_COMM_CMD := E_RS_COMM_CMD.NONE;	// Command Number, e.g. SEND
	bExecute:		BOOL;						// Setting to TRUE activates command
	sCmd:			STRING(255) := '';			// Command to be sent
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>